Added files via upload

--- a/index.html
+++ b/index.html
@@ -1,36 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Under Construction</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f1f1f1;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .container {
-      text-align: center;
-    }
-    h1 {
-      font-size: 2.5rem;
-      color: #333;
-    }
-    p {
-      font-size: 1.2rem;
-      color: #555;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>Under Construction... 🚜</h1>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="body.css" />
+    <title>Andrew Zgheib's Portfolio 👨🏻‍💻</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="text">
+        <h1>Hey there! 👋🏻</h1>
+        <p>
+          My portfolio is currently under construction 🚧 <br />
+          It'll be up and running soon! 🚀
+        </p>
+      </div>
+      <div class="socials">
+        <ul>
+          <li>
+            <a href="https://www.linkedin.com/in/andrewzgheib">
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg"
+                alt="My LinkedIn"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/andrewzgheib">
+              <img
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                alt="My GitHub"
+              />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
