--- a/index.html
+++ b/index.html
@@ -3,19 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="body.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Andrew Zgheib's Portfolio 👨🏻‍💻</title>
   </head>
+
   <body>
-    <div class="container">
-      <div class="text">
+    <!-- Main Container -->
+    <div>
+      <!-- Header Section -->
+      <header class="text">
         <h1>Hey there! 👋🏻</h1>
         <p>
           My portfolio is currently under construction 🚧 <br />
-          It'll be up and running soon! 🚀
+          It'll be up and running soon! 🚀 <br />
+          <br />
+          Follow the progress through my
+          <a
+            id="repo-link"
+            href="https://github.com/andrewzgheib/Portfolio-Website"
+            >Portfolio-Website</a
+          >
+          repository 📂
         </p>
-      </div>
-      <div class="socials">
+      </header>
+      <!-- Footer Section -->
+      <footer>
+        <!-- Social Links -->
         <ul>
           <li>
             <a href="https://www.linkedin.com/in/andrewzgheib">
@@ -34,7 +47,7 @@
             </a>
           </li>
         </ul>
-      </div>
+      </footer>
     </div>
   </body>
 </html>
