added meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Andrew Zgheib" />
+    <meta name="description" content="Andrew Zgheib's Portfolio" />
     <link rel="stylesheet" href="styles.css" />
     <title>Andrew Zgheib's Portfolio 👨🏻‍💻</title>
   </head>
