--- a/index.html
+++ b/index.html
@@ -1,55 +1,49 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Andrew Zgheib" />
-    <meta name="description" content="Andrew Zgheib's Portfolio" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Andrew Zgheib's Portfolio 👨🏻‍💻</title>
-  </head>
 
-  <body>
-    <!-- Main Container -->
-    <div>
-      <!-- Header Section -->
-      <header class="text">
-        <h1>Hey there! 👋🏻</h1>
-        <p>
-          My portfolio is currently under construction 🚧 <br />
-          It'll be up and running soon! 🚀 <br />
-          <br />
-          Follow the progress through my
-          <a
-            id="repo-link"
-            href="https://github.com/andrewzgheib/Portfolio-Website"
-            >Portfolio-Website</a
-          >
-          repository 📂
-        </p>
-      </header>
-      <!-- Footer Section -->
-      <footer>
-        <!-- Social Links -->
-        <ul>
-          <li>
-            <a href="https://www.linkedin.com/in/andrewzgheib">
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg"
-                alt="My LinkedIn"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="https://github.com/andrewzgheib">
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
-                alt="My GitHub"
-              />
-            </a>
-          </li>
-        </ul>
-      </footer>
-    </div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Andrew Zgheib" />
+  <meta name="description" content="Andrew Zgheib's Portfolio" />
+  <link rel="stylesheet" href="styles.css" />
+  <title>Andrew Zgheib's Portfolio 👨🏻‍💻</title>
+</head>
+
+<body>
+  <!-- Main Container -->
+  <div>
+    <!-- Header Section -->
+    <header class="text">
+      <h1>Hey there! 👋🏻</h1>
+      <p>
+        My portfolio is currently under construction 🚧 <br />
+        It'll be up and running soon! 🚀 <br />
+        <br />
+        Follow the progress through my
+        <a id="repo-link" href="https://github.com/andrewzgheib/Portfolio-Website">Portfolio-Website</a>
+        repository 📂
+      </p>
+    </header>
+    <!-- Footer Section -->
+    <footer>
+      <!-- Social Links -->
+      <ul>
+        <li>
+          <a href="https://www.linkedin.com/in/andrewzgheib">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg"
+              alt="My LinkedIn" />
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/andrewzgheib">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+              alt="My GitHub" />
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </div>
+</body>
+
 </html>
