--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p class="profile-section-p2">CS Student — Content Writer</p>
       </div>
       <div class="btn-container">
-        <a href="assets/Andrew Zgheib - CV.pdf" download="Andrew Zgheib - CV.pdf"><button class="btn btn-color">Download CV</button></a>
+        <a href="assets/Andrew Zgheib - CV.pdf"><button class="btn btn-color">Check my CV</button></a>
         <a href="./#contact"><button class="btn btn-color">Get in touch</button></a>
       </div>
       <div id="socials-container">
@@ -66,7 +66,7 @@
           <div class="details-container">
             <img src="./assets/education.png" alt="Education icon" class="icon" />
             <h3>Education</h3>
-            <p>Bachelors Degree in Computer Science<br />University Saint-Joseph of Beirut</p>
+            <p>Bachelor's Degree in Computer Science<br />Saint-Joseph University of Beirut</p>
           </div>
           <div class="details-container">
             <img src="./assets/experience.png" alt="Experience icon" class="icon" />
@@ -76,11 +76,11 @@
         </div>
         <div class="text-container">
           <p>
-            As a Computer Science student, I have a strong passion for technology and its applications.
-            I am always eager to learn new things and I am constantly looking for ways to improve my skills.
-            I am a hardworking and dedicated individual who is always looking for new challenges.
-            I am also a content writer and I have published two articles on Campus-J's website.
-            I am always looking for new opportunities to learn and grow.
+            I am a driven and passionate Computer Science student with a strong academic foundation and a keen interest in continuous learning and exploring new technologies.
+            With relevant experience in developing solutions using modern tools like ASP .NET, Python, PostgreSQL, and Power BI, I am well-equipped to tackle complex challenges.
+            Beyond technical skills, I possess strong soft skills, including problem-solving, decision-making, teamwork, and adaptability, helping me excel in dynamic environments.
+            I am a dedicated and driven individual, always seeking opportunities to learn and grow.
+            With a passion for technology and a commitment to delivering high-quality work, I am excited to contribute my skills and knowledge to meaningful projects that drive innovation and create value.
           </p>
         </div>
       </div>
