--- a/index.html
+++ b/index.html
@@ -212,10 +212,7 @@
           <h2 class="experience-subtitle project-title">HR Database Design</h2>
           <div class="btn-container">
             <a href="https://github.com/andrewzgheib/HR-Database">
-              <button class="btn btn-color project-btn">GitHub</button>
-            </a>
-            <a href="https://github.com/andrewzgheib">
-              <button class="btn btn-color project-btn">Live Demo</button>
+              <button class="btn btn-color project-btn">GitHub Repository</button>
             </a>
           </div>
         </div>
@@ -226,11 +223,8 @@
           <h2 class="experience-subtitle project-title">Football PSQL Analysis</h2>
           <div class="btn-container">
             <a href="https://github.com/andrewzgheib/Football-Database-Analysis">
-              <button class="btn btn-color project-btn">GitHub</button>
+              <button class="btn btn-color project-btn">GitHub Repository</button>
             </a>
-            <a href="">
-              <button class="btn btn-color project-btn">Live Demo</button>
-            </a>  
           </div>
         </div>
       </div>
