--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Andrew Zgheib's Portfolio" />
   <link rel="stylesheet" href="styles/styles.css" />
   <link rel="stylesheet" href="styles/mediaqueries.css" />
-  <link rel="icon" href="assets/">
+  <link rel="icon" href="assets/AZ.png">
   <title>Andrew Zgheib - Portfolio 👨🏻‍💻</title>
 </head>
 
