modified meta tags, about section, and footer

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Andrew Zgheib" />
-  <meta name="description" content="Andrew Zgheib's Portfolio" />
+  <meta name="description" content="Computer Science student. ." />
+  <meta name="keywords" content="HTML, CSS, JavaScript, Andrew, Zgheib, Andrew Zgheib" />
   <link rel="stylesheet" href="styles/styles.css" />
   <link rel="stylesheet" href="styles/mediaqueries.css" />
   <link rel="icon" href="assets/AZ.png">
@@ -76,10 +77,10 @@
         </div>
         <div class="text-container">
           <p>
-            I am a driven and passionate Computer Science student with a strong academic foundation and a keen interest in continuous learning and exploring new technologies.
-            With relevant experience in developing solutions using modern tools like ASP .NET, Python, PostgreSQL, and Power BI, I am well-equipped to tackle complex challenges.
-            Beyond technical skills, I possess strong soft skills, including problem-solving, decision-making, teamwork, and adaptability, helping me excel in dynamic environments.
-            I am a dedicated and driven individual, always seeking opportunities to learn and grow.
+            I am a driven and passionate Computer Science student with a strong academic foundation and a keen interest in continuous learning and exploring new technologies. <br>
+            With relevant experience in developing solutions using modern tools like ASP .NET, Python, PostgreSQL, and Power BI, I am well-equipped to tackle complex challenges. <br>
+            Beyond technical skills, I possess strong soft skills, including problem-solving, decision-making, teamwork, and adaptability, helping me excel in dynamic environments. <br>
+            Additionally, as a part-time content writer, I have honed my communication skills and have a keen eye for detail, allowing me to convey complex technical concepts in an accessible and engaging manner. <br>
             With a passion for technology and a commitment to delivering high-quality work, I am excited to contribute my skills and knowledge to meaningful projects that drive innovation and create value.
           </p>
         </div>
@@ -247,10 +248,10 @@
     <nav>
       <div class="nav-links-container">
         <ul class="nav-links">
+          <li><a href="#profile">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
