--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
         <div class="about-containers">
           <div class="details-container">
             <img src="./assets/education.png" alt="Education icon" class="icon" />
-            <h3>Education</h3>
-            <p>Bachelor's Degree in Computer Science<br />Saint-Joseph University of Beirut</p>
+            <h3>Background</h3>
+            <p>Bachelor Degree in Computer Science<br />Saint Joseph University of Beirut</p>
           </div>
           <div class="details-container">
             <img src="./assets/experience.png" alt="Experience icon" class="icon" />
-            <h3>Background</h3>
+            <h3>Experience</h3>
             <p>Data Intern @ Monty Mobile<br/>3 CCNA Certifications<br/>3 articles published <a href="https://usj.edu.lb/blog/inst/articles-auteur.php?id=59">here</a></p>
           </div>
         </div>
@@ -85,7 +85,7 @@
           </p>
         </div>
       </div>
-    </div>
+    </div>  
   </section>
   <section id="experience">
     <h1 class="title">Skills & Tools</h1>
