--- a/index.html
+++ b/index.html
@@ -67,12 +67,18 @@
           <div class="details-container">
             <img src="./assets/education.png" alt="Education icon" class="icon" />
             <h3>Background</h3>
-            <p>Bachelor Degree in Computer Science<br />Saint Joseph University of Beirut</p>
+            <p>Bachelor Degree in Computer Science <br/>
+               Saint Joseph University of Beirut <br/>
+               3 articles published <a href="https://usj.edu.lb/blog/inst/articles-auteur.php?id=59">here</a>
+            </p>
           </div>
           <div class="details-container">
             <img src="./assets/experience.png" alt="Experience icon" class="icon" />
             <h3>Experience</h3>
-            <p>Data Intern @ Monty Mobile<br/>3 CCNA Certifications<br/>3 articles published <a href="https://usj.edu.lb/blog/inst/articles-auteur.php?id=59">here</a></p>
+            <p>Data Intern @ Monty Mobile <br/>
+               3 CCNA Certifications <br/>
+               1 DataCamp Certificate
+            </p>
           </div>
         </div>
         <div class="text-container">
