--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             With relevant experience in developing solutions using modern tools like ASP .NET, Python, PostgreSQL, and Power BI, I am well-equipped to tackle complex challenges. <br>
             Beyond technical skills, I possess strong soft skills, including problem-solving, decision-making, teamwork, and adaptability, helping me excel in dynamic environments. <br>
             Additionally, as a part-time content writer, I have honed my communication skills and have a keen eye for detail, allowing me to convey complex technical concepts in an accessible and engaging manner. <br>
-            With a passion for technology and a commitment to delivering high-quality work, I am excited to contribute my skills and knowledge to meaningful projects that drive innovation and create value.
+            I am excited to contribute my skills and knowledge to meaningful projects that drive innovation and create value.
           </p>
         </div>
       </div>
