modified project section

--- a/index.html
+++ b/index.html
@@ -214,22 +214,25 @@
         </div>
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/project-2.png" alt="Project 2" class="project-img" id="project-2"/>
+            <img src="./assets/project-3.png" alt="Project 3" class="project-img" id="project-3"/>
           </div>
-          <h2 class="experience-subtitle project-title">HR Database Design</h2>
+          <h2 class="experience-subtitle project-title">ML Sentiment Analysis</h2>
           <div class="btn-container">
-            <a href="https://github.com/andrewzgheib/HR-Database">
-              <button class="btn btn-color project-btn">GitHub Repository</button>
+            <a href="https://github.com/andrewzgheib/ML-Sentiment-Analysis">
+              <button class="btn btn-color project-btn">GitHub</button>
+            </a>
+            <a href="https://colab.research.google.com/github/andrewzgheib/ML-Sentiment-Analysis/blob/main/main.ipynb">
+              <button class="btn btn-color project-btn">Live Demo</button>
             </a>
           </div>
         </div>
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/project-3.png" alt="Project 3" class="project-img" id="project-3"/>
+            <img src="./assets/project-2.png" alt="Project 2" class="project-img" id="project-2"/>
           </div>
-          <h2 class="experience-subtitle project-title">Football PSQL Analysis</h2>
+          <h2 class="experience-subtitle project-title">HR Database Design</h2>
           <div class="btn-container">
-            <a href="https://github.com/andrewzgheib/Football-Database-Analysis">
+            <a href="https://github.com/andrewzgheib/HR-Database">
               <button class="btn btn-color project-btn">GitHub Repository</button>
             </a>
           </div>
