--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="details-container">
             <img src="./assets/experience.png" alt="Experience icon" class="icon" />
             <h3>Experience</h3>
-            <p>Data Intern @ Monty Mobile <br/>
+            <p>Data Analysis Intern @ Monty Mobile <br/>
                3 CCNA Certifications <br/>
                1 DataCamp Certificate
             </p>
