updated CV & Certifications

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <h3>Experience</h3>
             <p>Data Analysis Intern @ Monty Mobile <br/>
                3 CCNA Certifications <br/>
-               1 DataCamp Certificate
+               2 DataCamp Certifications
             </p>
           </div>
         </div>
