--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             <img src="./assets/experience.png" alt="Experience icon" class="icon" />
             <h3>Experience</h3>
             <p>Data Analysis Intern @ Monty Mobile <br/>
-               3 CCNA Certifications <br/>
-               2 DataCamp Certifications
+               3 DataCamp Certifications <br/>
+               3 CCNA Certifications
             </p>
           </div>
         </div>
