--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p class="profile-section-p2">CS Student — Content Writer</p>
       </div>
       <div class="btn-container">
-        <a href="assets/Andrew Zgheib - CV.pdf"><button class="btn btn-color">Check my CV</button></a>
+        <a href="assets/CV - Andrew Zgheib.pdf"><button class="btn btn-color">Check my CV</button></a>
         <a href="./#contact"><button class="btn btn-color">Get in touch</button></a>
       </div>
       <div id="socials-container">
