added Google tag

--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
   <title>Andrew Zgheib - Portfolio 👨🏻‍💻</title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5L80F3ENDE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5L80F3ENDE');
+</script>
+  
 <body>
   <nav id="desktop-nav">
     <div>
