changed About Me text

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <div class="text-container">
             <p style="font-size: large;">
               I am a driven and passionate Computer Science student with a strong academic foundation and a keen interest in continuous learning and exploring new technologies. <br>
-              With relevant experience in developing solutions using modern tools like ASP .NET, Python, PostgreSQL, and Power BI, I am well-equipped to tackle complex challenges. <br>
+              With relevant experience in developing solutions using modern tools like C#, Python, PostgreSQL, and Power BI, I am well-equipped to tackle complex challenges. <br>
               Beyond technical skills, I possess strong soft skills, including problem-solving, decision-making, teamwork, and adaptability, helping me excel in dynamic environments. <br>
               Additionally, as a part-time content writer, I have honed my communication skills and have a keen eye for detail, allowing me to convey complex technical concepts in an accessible and engaging manner. <br>
               I am excited to contribute my skills and knowledge to meaningful projects that drive innovation and create value.
