--- a/index.html
+++ b/index.html
@@ -169,43 +169,37 @@
               <article>
                 <img src="assets/icons/checkmark.svg" alt="checkmark" class="icon" />
                 <div>
-                  <h3>ASP .NET</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img src="assets/icons/checkmark.svg" alt="checkmark" class="icon" />
-                <div>
-                  <h3>Pandas</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img src="assets/icons/checkmark.svg" alt="checkmark" class="icon" />
-                <div>
-                  <h3>Kotlin</h3>
-                  <p>Beginner</p>
-                </div>
-              </article>
-              <article>
-                <img src="assets/icons/checkmark.svg" alt="checkmark" class="icon" />
-                <div>
-                  <h3>MatplotLib</h3>
-                  <p>Intermediate</p>
+                  <h3>C#</h3>
                 </div>
               </article>
               <article>
                 <img src="assets/icons/checkmark.svg" alt="checkmark" class="icon" />
                 <div>
                   <h3>PostgreSQL</h3>
-                  <p>Advanced</p>
+                </div>
+              </article>
+              <article>
+                <img src="assets/icons/checkmark.svg" alt="checkmark" class="icon" />
+                <div>
+                  <h3>Kotlin</h3>
+                </div>
+              </article>
+              <article>
+                <img src="assets/icons/checkmark.svg" alt="checkmark" class="icon" />
+                <div>
+                  <h3>Bash</h3>
+                </div>
+              </article>
+              <article>
+                <img src="assets/icons/checkmark.svg" alt="checkmark" class="icon" />
+                <div>
+                  <h3>Python</h3>
                 </div>
               </article>
               <article>
                 <img src="assets/icons/checkmark.svg" alt="checkmark" class="icon" />
                 <div>
                   <h3>DAX</h3>
-                  <p>Intermediate</p>
                 </div>
               </article>
             </div>
@@ -217,42 +211,36 @@
                 <img src="assets/icons/checkmark.svg" alt="checkmark" class="icon" />
                 <div>
                   <h3>VS Code</h3>
-                  <p>Advanced </p>
                 </div>
               </article>
               <article>
                 <img src="assets/icons/checkmark.svg" alt="checkmark" class="icon" />
                 <div>
                   <h3>PowerBI</h3>
-                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
                 <img src="assets/icons/checkmark.svg" alt="checkmark" class="icon" />
                 <div>
                   <h3>pgAdmin</h3>
-                  <p>Advanced</p>
                 </div>
               </article>
               <article>
                 <img src="assets/icons/checkmark.svg" alt="checkmark" class="icon" />
                 <div>
                   <h3>Postman</h3>
-                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
                 <img src="assets/icons/checkmark.svg" alt="checkmark" class="icon" />
                 <div>
                   <h3>Git</h3>
-                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
                 <img src="assets/icons/checkmark.svg" alt="checkmark" class="icon" />
                 <div>
                   <h3>Jira</h3>
-                  <p>Advanced</p>
                 </div>
               </article>
             </div>
