changed Contact Me links

--- a/index.html
+++ b/index.html
@@ -293,11 +293,11 @@
       <div class="contact-info-upper-container">
         <div class="contact-info-container" id="cic1">
           <img src="assets/icons/email.svg" alt="email" class="icon contact-icon email-icon" />
-          <p><a href="mailto:andrewzgheib2004@gmail.com">andrewzgheib2004@gmail.com</a></p>
+          <p><a href="mailto:andrew.zgheib@outlook.com">andrew.zgheib@outlook.com</a></p>
         </div>
         <div class="contact-info-container" id="cic2">
           <img src="assets/icons/linkedin.svg" alt="LinkedIn" class="icon contact-icon" />
-          <p><a href="https://www.linkedin.com/in/andrewzgheib">andrewzgheib</a></p>
+          <p><a href="https://www.linkedin.com/messaging/compose/?recipient=andrewzgheib">andrewzgheib</a></p>
         </div>
       </div>
     </section>
