updated index.html to match new domain

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
           </ul>
         </div>
       </nav>
-      <p>You can find this Portfolio's source code <a href="https://github.com/andrewzgheib/portfolio-website">here</a>
+      <p>You can find this Portfolio's source code <a href="https://github.com/andrewzgheib/andrewzgheib.github.io">here</a>
       </p>
     </footer>
     <script src="script.js"></script>
